<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_posture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dack.alex.swimright.PostureActivity">
    <TextView
        android:text="@string/button_posture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:id="@+id/postureMenu"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/button_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postureMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/runButton"
        android:onClick="intentRun"/>

    <Button
        android:text="@string/button_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statsButton"
        android:layout_below="@+id/runButton"
        android:layout_centerHorizontal="true"
        android:onClick="intentStats"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_main"
        android:id="@+id/buttonMain"
        android:onClick="intentMain"/>

</RelativeLayout>
