<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#ffffff">

    <TextView
        android:text="MAIN MENU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/mainMenu"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="normal|bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/mainMenu"
        android:text="@string/button_profile"
        android:onClick="intentProfile"
        android:id="@+id/buttonProfile"
        android:textColor="#000000"
        android:background="#84ecd5"
        android:layout_alignStart="@+id/mainMenu"
        android:layout_alignEnd="@+id/mainMenu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonProfile"
        android:text="@string/button_posture"
        android:onClick="intentPosture"
        android:id="@+id/buttonPosture"
        android:textColor="#000000"
        android:background="#6ec9b4"
        android:layout_alignStart="@+id/buttonProfile"
        android:layout_alignEnd="@+id/buttonProfile" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPosture"
        android:text="@string/button_help"
        android:onClick="intentHelp"
        android:id="@+id/buttonHelp"
        android:textColor="#000000"
        android:background="#57a392"
        android:layout_alignStart="@+id/buttonPosture"
        android:layout_alignEnd="@+id/buttonPosture" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHelp"
        android:text="@string/button_graph"
        android:onClick="intentGraph"
        android:id="@+id/buttonGraph"
        android:textColor="#000000"
        android:background="#498778"
        android:layout_alignStart="@+id/buttonHelp"
        android:layout_alignEnd="@+id/buttonHelp" />

</RelativeLayout>